--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,5 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+<h2>Application</h2>
+{{!-- Application Nav --}}
 
+{{!-- Outlet for Page --}}
 {{outlet}}
