--- a/app/templates/page.hbs
+++ b/app/templates/page.hbs
@@ -1,10 +1,11 @@
-{{!-- {{nav-index section=model.section currentRoot=root}} --}}
-<div class="page-img">
+<div class="page">
     <div class="page-nav">
-        {{#link-to "page" model.prev}}Prev{{/link-to}}
-        <form>{{input value=gotopage}} <button {{action 'go_to' gotopage}}>Go</button></form>
-        {{#link-to "page" model.next}}Next{{/link-to}}    
+        <span>{{#link-to "page" model.prev}}Prev{{/link-to}}</span>
+        <span><form>{{input value=gotopage}} <button {{action 'go_to' gotopage}}>Go</button></form></span>
+        <span>{{#link-to "page" model.next}}Next{{/link-to}}</span>    
     </div>
-    <img src="{{model.emory_url}}" alt="BDB - {{model.section}} - Page: {{model.id}}">
-</div>
-{{outlet}}
+    <div class="page-img">
+        <img src="{{model.img_url}}" alt="BDB - {{model.section}} - Page: {{model.id}}">
+    </div>
+    {{!-- {{outlet}} --}}
+</div>    {{!-- {{nav-index section=model.section currentRoot=root}} --}}
