--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,7 +2,7 @@
     <nav class="section-nav">
         <div class="toolbar">
             <span>א</span>
-            <span>BDB</span>
+            <span>{{#link-to "home"}}BDB{{/link-to}}</span>
             <span {{action 'toggle_section_nav'}}>&sect;</span>
         </div>
         <ul class="sections{{if isSectionNavActive ' active'}}">
