--- a/app/templates/components/page-navigation.hbs
+++ b/app/templates/components/page-navigation.hbs
@@ -1,3 +1,3 @@
-<span>{{#link-to "page" model.prev}}Prev{{/link-to}}</span>
-<span><form>{{input value=gotopage}}{{#link-to 'page' gotopage tagName='button' }}Go{{/link-to}}</form></span>
-<span>{{#link-to "page" model.next}}Next{{/link-to}}</span>    
+<span>{{#link-to "page" prev}}Prev{{/link-to}}</span>
+<span><form>{{input value=page_id}}{{#link-to 'page' page_id tagName='button' }}Go{{/link-to}}</form></span>
+<span>{{#link-to "page" next}}Next{{/link-to}}</span>    
