--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,19 +1,25 @@
 <div class="wrapper">
+    <div class="toolbar">
+        <span>א</span>
+        <span>{{#link-to "home"}}BDB{{/link-to}}</span>
+        <span {{action 'toggle_section_nav'}}>&sect;</span>
+    </div>
+    {{!-- <ul id="alph-heb" class="alphabet">
+            {{#each hebrew as |letter|}}
+                <li>{{letter.translit}}</li>
+            {{/each}}
+        </ul> --}}
     <nav class="section-nav">
-        <div class="toolbar">
-            <span>א</span>
-            <span>{{#link-to "home"}}BDB{{/link-to}}</span>
-            <span {{action 'toggle_section_nav'}}>&sect;</span>
-        </div>
         <ul class="sections{{if isSectionNavActive ' active'}}">
-            <li {{action 'toggle_section_nav'}} >{{#link-to "page" 'v'}}Preface{{/link-to}}</li>
-            <li {{action 'toggle_section_nav'}} >{{#link-to "page" 'xiii'}}Abbr{{/link-to}}</li>
-            <li {{action 'toggle_section_nav'}} >{{#link-to "page" '1'}}Hebrew{{/link-to}}</li>
-            <li {{action 'toggle_section_nav'}} >{{#link-to "page" '1078'}}Aramaic{{/link-to}}</li>
-            <li {{action 'toggle_section_nav'}} >{{#link-to "page" '1119'}}Errata{{/link-to}}</li>
+            {{#each sections as |section| }}
+                <li {{action 'toggle_section_nav'}}>
+                    {{#link-to "page" section.start_page}}
+                        {{section.display}}
+                    {{/link-to}}
+                </li>
+            {{/each}}
         </ul>
     </nav>
-
 
     {{!-- Outlet for Page --}}
     {{outlet}}
