--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -8,6 +8,7 @@ html {
   margin: 0;
   padding: 0;
   font-family: 'Linux Libertine O', 'Times New Roman', Serif;
+  max-width: 975px;
 }
 
 body>div {
@@ -25,17 +26,20 @@ body>div {
 
 .wrapper {
   height: 100%;
+  overflow: hidden;
 }
 
 .toolbar {
+  max-width: 975px;
   background-color: white;
-  position: fixed;
+  position: absolute;
   width: 100%;
   display: flex;
   justify-content: space-between;
   border-bottom: solid 1px #ddd;
   padding: 0.25rem;
-  box-shadow: #222 0px -5px 10px 0px;
+  box-shadow: #222 -5px -5px 10px 0px;
+  z-index: 9999;
 }
 
 .toolbar a {
@@ -59,19 +63,19 @@ body>div {
 }
 
 .section-nav {
-  position:relative;
+  position: relative;
   background-color: green;
   box-shadow: 0px 12px 12px -15px #111;
   display: block;
-  top:2.5rem;
+  top: 2.25rem;
 }
 
 .sections {
   margin: 0;
   padding: 0 0.25rem;
   background-color: white;
-  display: none;
   border-bottom: solid 1px #ddd;
+  display: none;
 }
 
 .section-nav .active {
@@ -109,22 +113,95 @@ body>div {
 }
 
 .alphabet {
-  margin: 0;
-  padding: 0 0.25rem;
+  position: absolute;
   background-color: white;
-  /* display: none; */
+  z-index: 0;
+  border: solid 1px #ddd;
+  border-left: none;
+  border-radius: 0 0.25rem 0.25rem 0;
+  top: 2.75rem;
+  bottom: 2.75rem;
+  margin: 0;
+  padding: 0;
+  overflow-y: auto;
+  font-size: 1.5rem;
+  box-shadow: 02px 0px 10px -5px #111;
+  display: flex;
+  grid-template: auto auto;
+}
+
+.alphabet ul {
+  height: 100%;
+  border-radius: none;
+  margin: 0;
+  padding: 0.1rem;
+  list-style: none;
+  overflow: auto;
+  border-left: solid 1px #ddd;
+}
+
+.alphabet .active {
+  display: block;
+}
+
+.letters,
+.roots {
+  display: none;
+}
+
+.letters li {
+  margin: 0;
+  color: #444;
+  padding: 0.25rem 0.75rem;
+  text-align: center;
   border-bottom: solid 1px #ddd;
+}
+
+.letters li:last-of-type {
+  border-bottom: none;
+}
+
+.roots {
+  border-radius: none;
+  margin: 0;
+  padding: 0.1rem;
+  list-style: none;
+  background-color: #eee;
+}
+
+.roots li {
+  margin: 0;
+  text-align: right;
+  padding: 0.25rem 0.75rem;
+  text-align: center;
+  border-bottom: solid 1px #ddd;
+}
+
+.roots li a {
+  text-decoration: none;
+  color: #444;
+}
+
+.roots li:last-of-type {
+  border-bottom: none;
+}
+
+.roots .current {
+  text-decoration: underline;
 }
 
 .page {
   padding-top: 2rem;
+  margin-bottom: 2.5rem;
+  height: 100%;
+  overflow-x: scroll;
 }
 
 .page-nav {
-  box-shadow: #222 0px 5px 10px 0px;
+  max-width: 975px;
+  box-shadow: #222 -5px 5px 10px 0px;
   background-color: white;
-  overflow: hidden;
-  position: fixed;
+  position: absolute;
   bottom: 0;
   width: 100%;
   display: grid;
@@ -178,4 +255,8 @@ body>div {
   border-radius: 2px;
   width: 30%;
   margin: 0 0.15rem;
+}
+
+.page-img {
+  max-width: 30rem;
 }
