--- a/app/templates/page.hbs
+++ b/app/templates/page.hbs
@@ -1,4 +1,4 @@
-<div class="page">
+<div id="page" class="page">
     {{page-navigation
         page_id=(readonly model.id)
         next=model.next
