--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,4 +1,4 @@
-<div id="page" class="page">
+<div id="page" class="page title">
     {{page-navigation
         page_id=(readonly model.id)
         next=model.next
