--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -67,7 +67,7 @@ body>div {
 .page {
   margin-top: 2.25rem;
   height: calc(100vh - 5rem);
-  overflow: auto; /* Must be 'scroll' not 'auto' */
+  overflow: scroll;
   -webkit-overflow-scrolling: touch;
 }
 
